--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
-  text-align: center;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: thick double #32a1ce;
+    border-radius: 25% 10%;
+    padding: 40px;
+    background-image: url("https://natworld.info/wp-content/uploads/2020/04/poberezhe-morya.jpg");
 }
